Prevent image logo distortion
The image logo on this site http://cn.chinaproject.harvard.edu/ gets "squished"
when viewing it on a small device/mobile.

 #9938

--- a/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
+++ b/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
@@ -338,7 +338,7 @@ div.sidebar {
 .ui-tabs .ui-tabs-nav li a {
     min-height: 35px!important;
 }
-.header-left.header-main.header-right .region-header-second .region-inner {
+.header-left.header-main.header-right .region-header-second td.region-inner {
     margin-left: 0;
 }
 
